--- a/src/components/inputs/text-input/text-input.module.scss
+++ b/src/components/inputs/text-input/text-input.module.scss
@@ -1,3 +1,29 @@
 .container {
+  display: flex;
+  gap: 10px;
+  border: 1px solid rgba(0,0,0,0.2);
+  width: max-content;
+  align-items: center;
+  padding: 8px;
+  border-radius: 4px;
 
+  label {
+    font-size: 11px;
+    font-weight: 400;
+    color: rgba(0,0,0,0.5);
+  }
+
+  input {
+    font-size: 12px;
+    font-weight: 500;
+  }
+
+  &:hover,
+  &:focus-within {
+    border: 1px solid rgba(0,0,0,0.3);
+  }
+
+  &.error {
+    border: 1px solid rgba(255,0,0,0.5);
+  }
 }
