--- a/src/components/inputs/text-input/text-input.module.scss
+++ b/src/components/inputs/text-input/text-input.module.scss
@@ -1,29 +1,50 @@
-.container {
-  display: flex;
-  gap: 10px;
-  border: 1px solid rgba(0,0,0,0.2);
-  width: max-content;
-  align-items: center;
-  padding: 8px;
-  border-radius: 4px;
+.wrapper {
+  line-height: 0.7;
+  .container {
+    display: flex;
+    gap: 10px;
+    border: 1px solid rgba(0,0,0,0.2);
+    width: max-content;
+    align-items: center;
+    padding: 8px;
+    border-radius: 4px;
 
-  label {
-    font-size: 11px;
-    font-weight: 400;
-    color: rgba(0,0,0,0.5);
+    label {
+      font-size: 11px;
+      font-weight: 400;
+      color: rgba(0,0,0,0.5);
+    }
+
+    input {
+      font-size: 12px;
+      font-weight: 500;
+    }
+
+    &:hover,
+    &:focus-within {
+      border: 1px solid rgba(0,0,0,0.3);
+    }
+
+    &.error {
+      border: 1px solid rgba(255,0,0,0.5);
+    }
+
+    &.success {
+        border: 1px solid rgba(0,255,0,0.5);
+    }
   }
 
-  input {
-    font-size: 12px;
+  .error_label {
+    padding-left: 3px;
+    font-size: 10px;
     font-weight: 500;
+    color: rgba(255,0,0,0.5);
   }
 
-  &:hover,
-  &:focus-within {
-    border: 1px solid rgba(0,0,0,0.3);
-  }
-
-  &.error {
-    border: 1px solid rgba(255,0,0,0.5);
+  .success_label {
+    padding-left: 3px;
+    font-size: 10px;
+    font-weight: 500;
+    color: rgba(0,255,0,0.5);
   }
 }
