--- a/src/components/inputs/text-input/text-input.module.scss
+++ b/src/components/inputs/text-input/text-input.module.scss
@@ -18,6 +18,7 @@
     input {
       font-size: 12px;
       font-weight: 500;
+      background: transparent;
     }
 
     &:hover,
@@ -25,12 +26,20 @@
       border: 1px solid rgba(0,0,0,0.3);
     }
 
+    &:disabled {
+      border: 1px solid rgba(0,0,0,0.1);
+    }
+
     &.error {
       border: 1px solid rgba(255,0,0,0.5);
     }
 
     &.success {
-        border: 1px solid rgba(0,255,0,0.5);
+        border: 1px solid rgba(0,120,0,0.5);
+    }
+
+    &.disabled {
+      background-color: rgba(0,0,0,0.05)
     }
   }
 
@@ -45,6 +54,6 @@
     padding-left: 3px;
     font-size: 10px;
     font-weight: 500;
-    color: rgba(0,255,0,0.5);
+    color: rgba(0,120   ,0,0.5);
   }
 }
